--- a/chess.html
+++ b/chess.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sleek Chess Game</title>
+    <!-- Load Tailwind CSS for utility classes and the Inter font -->
+    <script src="https://cdn.tailwindcss.com"></script>
+     <link rel="stylesheet" href="css.css">
+</head>
+<body>
 
+    <div id="app-container">
+        <div id="status-message">White to move.</div>
+        <div id="chessboard">
+            <!-- Chess squares will be generated here by JavaScript -->
+        </div>
+        <button id="reset-button">Restart Game</button>
+    </div>
+<script src="js.js"></script>
+   
+</body>
+</html>
